@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2011, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2014, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,18 +25,24 @@
 
 package sun.security.provider;
 
+/* BEGIN android-removed
 import java.io.*;
 import java.util.*;
+ * END android-removed */
 import java.security.cert.*;
 import sun.security.x509.X509CertImpl;
 import sun.security.x509.X509CRLImpl;
+/* BEGIN android-removed
 import sun.security.pkcs.PKCS7;
 import sun.security.provider.certpath.X509CertPath;
 import sun.security.provider.certpath.X509CertificatePair;
 import sun.security.util.DerValue;
+ * END android-removed */
 import sun.security.util.Cache;
-import sun.misc.BASE64Decoder;
+/* BEGIN android-removed
+import java.util.Base64;
 import sun.security.pkcs.ParsingException;
+ * END android-removed */
 
 /**
  * This class defines a certificate factory for X.509 v3 certificates &
@@ -57,16 +63,24 @@ import sun.security.pkcs.ParsingException;
  * @see sun.security.x509.X509CRLImpl
  */
 
-public class X509Factory extends CertificateFactorySpi {
+// BEGIN android-changed
+// Was: public class X509Factory extends CertificateFactorySpi {
+public class X509Factory {
+// END android-changed
 
+    /* BEGIN android-removed
     public static final String BEGIN_CERT = "-----BEGIN CERTIFICATE-----";
     public static final String END_CERT = "-----END CERTIFICATE-----";
+     * END android-removed */
 
     private static final int ENC_MAX_LENGTH = 4096 * 1024; // 4 MB MAX
 
-    private static final Cache certCache = Cache.newSoftMemoryCache(750);
-    private static final Cache crlCache = Cache.newSoftMemoryCache(750);
+    private static final Cache<Object, X509CertImpl> certCache
+        = Cache.newSoftMemoryCache(750);
+    private static final Cache<Object, X509CRLImpl> crlCache
+        = Cache.newSoftMemoryCache(750);
 
+    /* BEGIN android-removed
     /**
      * Generates an X.509 certificate object and initializes it with
      * the data read from the input stream <code>is</code>.
@@ -77,7 +91,8 @@ public class X509Factory extends CertificateFactorySpi {
      * from the input stream.
      *
      * @exception CertificateException on parsing errors.
-     */
+     *
+    @Override
     public Certificate engineGenerateCertificate(InputStream is)
         throws CertificateException
     {
@@ -90,7 +105,7 @@ public class X509Factory extends CertificateFactorySpi {
         try {
             byte[] encoding = readOneBlock(is);
             if (encoding != null) {
-                X509CertImpl cert = (X509CertImpl)getFromCache(certCache, encoding);
+                X509CertImpl cert = getFromCache(certCache, encoding);
                 if (cert != null) {
                     return cert;
                 }
@@ -101,15 +116,15 @@ public class X509Factory extends CertificateFactorySpi {
                 throw new IOException("Empty input");
             }
         } catch (IOException ioe) {
-            throw (CertificateException)new CertificateException
-            ("Could not parse certificate: " + ioe.toString()).initCause(ioe);
+            throw new CertificateException("Could not parse certificate: " +
+                    ioe.toString(), ioe);
         }
     }
 
     /**
      * Read from the stream until length bytes have been read or EOF has
      * been reached. Return the number of bytes actually read.
-     */
+     *
     private static int readFully(InputStream in, ByteArrayOutputStream bout,
             int length) throws IOException {
         int read = 0;
@@ -125,6 +140,7 @@ public class X509Factory extends CertificateFactorySpi {
         }
         return read;
     }
+     * END android-removed */
 
     /**
      * Return an interned X509CertImpl for the given certificate.
@@ -138,6 +154,12 @@ public class X509Factory extends CertificateFactorySpi {
      * It is useful for certificates that cannot be created via
      * generateCertificate() and for converting other X509Certificate
      * implementations to an X509CertImpl.
+     *
+     * @param c The source X509Certificate
+     * @return An X509CertImpl object that is either a cached certificate or a
+     *      newly built X509CertImpl from the provided X509Certificate
+     * @throws CertificateException if failures occur while obtaining the DER
+     *      encoding for certificate data.
      */
     public static synchronized X509CertImpl intern(X509Certificate c)
             throws CertificateException {
@@ -151,7 +173,7 @@ public class X509Factory extends CertificateFactorySpi {
         } else {
             encoding = c.getEncoded();
         }
-        X509CertImpl newC = (X509CertImpl)getFromCache(certCache, encoding);
+        X509CertImpl newC = getFromCache(certCache, encoding);
         if (newC != null) {
             return newC;
         }
@@ -168,6 +190,12 @@ public class X509Factory extends CertificateFactorySpi {
     /**
      * Return an interned X509CRLImpl for the given certificate.
      * For more information, see intern(X509Certificate).
+     *
+     * @param c The source X509CRL
+     * @return An X509CRLImpl object that is either a cached CRL or a
+     *      newly built X509CRLImpl from the provided X509CRL
+     * @throws CRLException if failures occur while obtaining the DER
+     *      encoding for CRL data.
      */
     public static synchronized X509CRLImpl intern(X509CRL c)
             throws CRLException {
@@ -181,7 +209,7 @@ public class X509Factory extends CertificateFactorySpi {
         } else {
             encoding = c.getEncoded();
         }
-        X509CRLImpl newC = (X509CRLImpl)getFromCache(crlCache, encoding);
+        X509CRLImpl newC = getFromCache(crlCache, encoding);
         if (newC != null) {
             return newC;
         }
@@ -198,18 +226,17 @@ public class X509Factory extends CertificateFactorySpi {
     /**
      * Get the X509CertImpl or X509CRLImpl from the cache.
      */
-    private static synchronized Object getFromCache(Cache cache,
+    private static synchronized <K,V> V getFromCache(Cache<K,V> cache,
             byte[] encoding) {
         Object key = new Cache.EqualByteArray(encoding);
-        Object value = cache.get(key);
-        return value;
+        return cache.get(key);
     }
 
     /**
      * Add the X509CertImpl or X509CRLImpl to the cache.
      */
-    private static synchronized void addToCache(Cache cache, byte[] encoding,
-            Object value) {
+    private static synchronized <V> void addToCache(Cache<Object, V> cache,
+            byte[] encoding, V value) {
         if (encoding.length > ENC_MAX_LENGTH) {
             return;
         }
@@ -217,6 +244,7 @@ public class X509Factory extends CertificateFactorySpi {
         cache.put(key, value);
     }
 
+    /* BEGIN android-removed
     /**
      * Generates a <code>CertPath</code> object and initializes it with
      * the data read from the <code>InputStream</code> inStream. The data
@@ -227,7 +255,8 @@ public class X509Factory extends CertificateFactorySpi {
      *   <code>InputStream</code>
      * @exception CertificateException if an exception occurs while decoding
      * @since 1.4
-     */
+     *
+    @Override
     public CertPath engineGenerateCertPath(InputStream inStream)
         throws CertificateException
     {
@@ -258,7 +287,8 @@ public class X509Factory extends CertificateFactorySpi {
      * @exception CertificateException if an exception occurs while decoding or
      *   the encoding requested is not supported
      * @since 1.4
-     */
+     *
+    @Override
     public CertPath engineGenerateCertPath(InputStream inStream,
         String encoding) throws CertificateException
     {
@@ -290,7 +320,8 @@ public class X509Factory extends CertificateFactorySpi {
      *   certificates
      * @exception CertificateException if an exception occurs
      * @since 1.4
-     */
+     *
+    @Override
     public CertPath
         engineGenerateCertPath(List<? extends Certificate> certificates)
         throws CertificateException
@@ -309,7 +340,8 @@ public class X509Factory extends CertificateFactorySpi {
      * @return an <code>Iterator</code> over the names of the supported
      *         <code>CertPath</code> encodings (as <code>String</code>s)
      * @since 1.4
-     */
+     *
+    @Override
     public Iterator<String> engineGetCertPathEncodings() {
         return(X509CertPath.getEncodingsStatic());
     }
@@ -324,7 +356,8 @@ public class X509Factory extends CertificateFactorySpi {
      * initialized with the data from the input stream.
      *
      * @exception CertificateException on parsing errors.
-     */
+     *
+    @Override
     public Collection<? extends java.security.cert.Certificate>
             engineGenerateCertificates(InputStream is)
             throws CertificateException {
@@ -349,7 +382,8 @@ public class X509Factory extends CertificateFactorySpi {
      * from the input stream.
      *
      * @exception CRLException on parsing errors.
-     */
+     *
+    @Override
     public CRL engineGenerateCRL(InputStream is)
         throws CRLException
     {
@@ -361,7 +395,7 @@ public class X509Factory extends CertificateFactorySpi {
         try {
             byte[] encoding = readOneBlock(is);
             if (encoding != null) {
-                X509CRLImpl crl = (X509CRLImpl)getFromCache(crlCache, encoding);
+                X509CRLImpl crl = getFromCache(crlCache, encoding);
                 if (crl != null) {
                     return crl;
                 }
@@ -386,7 +420,8 @@ public class X509Factory extends CertificateFactorySpi {
      * initialized with the data from the input stream.
      *
      * @exception CRLException on parsing errors.
-     */
+     *
+    @Override
     public Collection<? extends java.security.cert.CRL> engineGenerateCRLs(
             InputStream is) throws CRLException
     {
@@ -404,16 +439,35 @@ public class X509Factory extends CertificateFactorySpi {
      * Parses the data in the given input stream as a sequence of DER
      * encoded X.509 certificates (in binary or base 64 encoded format) OR
      * as a single PKCS#7 encoded blob (in binary or base64 encoded format).
-     */
+     *
     private Collection<? extends java.security.cert.Certificate>
         parseX509orPKCS7Cert(InputStream is)
         throws CertificateException, IOException
     {
+        int peekByte;
+        byte[] data;
+        PushbackInputStream pbis = new PushbackInputStream(is);
         Collection<X509CertImpl> coll = new ArrayList<>();
-        byte[] data = readOneBlock(is);
-        if (data == null) {
+
+        // Test the InputStream for end-of-stream.  If the stream's
+        // initial state is already at end-of-stream then return
+        // an empty collection.  Otherwise, push the byte back into the
+        // stream and let readOneBlock look for the first certificate.
+        peekByte = pbis.read();
+        if (peekByte == -1) {
             return new ArrayList<>(0);
+        } else {
+            pbis.unread(peekByte);
+            data = readOneBlock(pbis);
         }
+
+        // If we end up with a null value after reading the first block
+        // then we know the end-of-stream has been reached and no certificate
+        // data has been found.
+        if (data == null) {
+            throw new CertificateException("No certificate data found");
+        }
+
         try {
             PKCS7 pkcs7 = new PKCS7(data);
             X509Certificate[] certs = pkcs7.getCertificates();
@@ -421,13 +475,13 @@ public class X509Factory extends CertificateFactorySpi {
             if (certs != null) {
                 return Arrays.asList(certs);
             } else {
-                // no crls provided
+                // no certificates provided
                 return new ArrayList<>(0);
             }
         } catch (ParsingException e) {
             while (data != null) {
                 coll.add(new X509CertImpl(data));
-                data = readOneBlock(is);
+                data = readOneBlock(pbis);
             }
         }
         return coll;
@@ -437,16 +491,35 @@ public class X509Factory extends CertificateFactorySpi {
      * Parses the data in the given input stream as a sequence of DER encoded
      * X.509 CRLs (in binary or base 64 encoded format) OR as a single PKCS#7
      * encoded blob (in binary or base 64 encoded format).
-     */
+     *
     private Collection<? extends java.security.cert.CRL>
         parseX509orPKCS7CRL(InputStream is)
         throws CRLException, IOException
     {
+        int peekByte;
+        byte[] data;
+        PushbackInputStream pbis = new PushbackInputStream(is);
         Collection<X509CRLImpl> coll = new ArrayList<>();
-        byte[] data = readOneBlock(is);
-        if (data == null) {
+
+        // Test the InputStream for end-of-stream.  If the stream's
+        // initial state is already at end-of-stream then return
+        // an empty collection.  Otherwise, push the byte back into the
+        // stream and let readOneBlock look for the first CRL.
+        peekByte = pbis.read();
+        if (peekByte == -1) {
             return new ArrayList<>(0);
+        } else {
+            pbis.unread(peekByte);
+            data = readOneBlock(pbis);
         }
+
+        // If we end up with a null value after reading the first block
+        // then we know the end-of-stream has been reached and no CRL
+        // data has been found.
+        if (data == null) {
+            throw new CRLException("No CRL data found");
+        }
+
         try {
             PKCS7 pkcs7 = new PKCS7(data);
             X509CRL[] crls = pkcs7.getCRLs();
@@ -460,7 +533,7 @@ public class X509Factory extends CertificateFactorySpi {
         } catch (ParsingException e) {
             while (data != null) {
                 coll.add(new X509CRLImpl(data));
-                data = readOneBlock(is);
+                data = readOneBlock(pbis);
             }
         }
         return coll;
@@ -477,7 +550,7 @@ public class X509Factory extends CertificateFactorySpi {
      * @param is the InputStream
      * @returns byte block or null if end of stream
      * @throws IOException If any parsing error
-     */
+     *
     private static byte[] readOneBlock(InputStream is) throws IOException {
 
         // The first character of a BLOCK.
@@ -511,14 +584,14 @@ public class X509Factory extends CertificateFactorySpi {
                     hyphen = 0;
                     last = next;
                 }
-                if (hyphen == 5 && (last==-1 || last=='\r' || last=='\n')) {
+                if (hyphen == 5 && (last == -1 || last == '\r' || last == '\n')) {
                     break;
                 }
             }
 
             // Step 2: Read the rest of header, determine the line end
             int end;
-            StringBuffer header = new StringBuffer("-----");
+            StringBuilder header = new StringBuilder("-----");
             while (true) {
                 int next = is.read();
                 if (next == -1) {
@@ -561,7 +634,7 @@ public class X509Factory extends CertificateFactorySpi {
             }
 
             // Step 4: Consume the footer
-            StringBuffer footer = new StringBuffer("-");
+            StringBuilder footer = new StringBuilder("-");
             while (true) {
                 int next = is.read();
                 // Add next == '\n' for maximum safety, in case endline
@@ -574,8 +647,7 @@ public class X509Factory extends CertificateFactorySpi {
 
             checkHeaderFooter(header.toString(), footer.toString());
 
-            BASE64Decoder decoder = new BASE64Decoder();
-            return decoder.decodeBuffer(new String(data, 0, pos));
+            return Base64.getMimeDecoder().decode(new String(data, 0, pos));
         }
     }
 
@@ -606,7 +678,7 @@ public class X509Factory extends CertificateFactorySpi {
      * @param tag   Tag already read (-1 mean not read)
      * @returns     The current tag, used to check EOC in indefinite-length BER
      * @throws IOException Any parsing error
-     */
+     *
     private static int readBERInternal(InputStream is,
             ByteArrayOutputStream bout, int tag) throws IOException {
 
@@ -623,7 +695,7 @@ public class X509Factory extends CertificateFactorySpi {
 
         int n = is.read();
         if (n == -1) {
-            throw new IOException("BER/DER length info ansent");
+            throw new IOException("BER/DER length info absent");
         }
         bout.write(n);
 
@@ -695,4 +767,5 @@ public class X509Factory extends CertificateFactorySpi {
         }
         return tag;
     }
+     * END android-removed */
 }
